--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-boilerplate-package",
+  "name": "@feizheng/next-boilerplate-package",
   "version": "1.0.0",
   "description": "next-boilerplate-package-description",
   "homepage": "https://github.com/afeiship/next-boilerplate-package",
@@ -16,6 +16,7 @@
   "main": "dist/next-boilerplate-package.js",
   "license": "MIT",
   "devDependencies": {
+    "@feizheng/next-nice-comments": "^1.0.0",
     "del": "^2.2.1",
     "gulp": "^4.0.2",
     "gulp-bump": "^3.1.3",
@@ -28,12 +29,14 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^2.1.2",
     "jest": "^24.9.0",
-    "yargs": "^4.7.1",
-    "uglify-save-license": "^0.4.1",
     "prettier": "^1.14.3",
-    "next-nice-comments": "github:afeiship/next-nice-comments"
+    "uglify-save-license": "^0.4.1",
+    "yargs": "^4.7.1"
   },
   "dependencies": {
-    "next-js-core2": "github:afeiship/next-js-core2"
+    "@feizheng/next-js-core2": "^2.0.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
