--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest": "^25.2.3",
     "prettier": "^2.0.2",
     "uglify-save-license": "^0.4.1",
-    "uglify-js": "^3.7.2",
+    "uglify-js": "3.7.2",
     "yargs": "^15.3.1"
   },
   "dependencies": {
