fix: registry publish config

--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "@feizheng/next-js-core2": "^2.5.0"
   },
   "publishConfig": {
-    "registry": "<%= registry %>"
+    "registry": "<%= registry.publish %>"
   }
 }
