--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@feizheng/gulp-pkg-header": "^1.0.4",
+    "@feizheng/next-js-core2": "^2.6.0",
     "@feizheng/rake-git": "^1.2.1",
     "del": "^5.1.0",
     "express": "^4.17.1",
@@ -29,12 +30,9 @@
     "gulp-uglify": "^3.0.2",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
-    "uglify-save-license": "^0.4.1",
     "uglify-js": "3.10.0",
+    "uglify-save-license": "^0.4.1",
     "yargs": "^15.4.0"
-  },
-  "dependencies": {
-    "@feizheng/next-js-core2": "^2.6.0"
   },
   "publishConfig": {
     "registry": "<%= registry.publish %>"
