--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "gulp",
     "test": "jest",
-    "start": "node ./express.js"
+    "start": "node ./express.js",
+    "release": "release-it"
   },
   "main": "dist/next-boilerplate-package.js",
   "license": "MIT",
@@ -30,6 +31,7 @@
     "gulp-uglify": "^3.0.2",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "release-it": "^14.2.1",
     "uglify-js": "3.10.0",
     "uglify-save-license": "^0.4.1",
     "yargs": "^15.4.0"
