--- a/package.json
+++ b/package.json
@@ -13,28 +13,26 @@
     "start": "node ./express.js",
     "release": "release-it"
   },
-  "main": "dist/next-boilerplate-package.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
     "@feizheng/gulp-pkg-header": "^1.0.4",
-    "@feizheng/next-js-core2": "^2.6.0",
-    "@feizheng/rake-git": "^1.2.1",
-    "del": "^5.1.0",
+    "@jswork/next": "^1.0.0",
+    "del": "^6.0.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
     "gulp-header": "^2.0.9",
     "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.3",
+    "gulp-load-plugins": "^2.0.5",
     "gulp-rename": "^2.0.0",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "jest": "^26.1.0",
-    "prettier": "^2.0.5",
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2",
     "release-it": "^14.2.1",
-    "uglify-js": "3.10.0",
-    "uglify-save-license": "^0.4.1",
-    "yargs": "^15.4.0"
+    "uglify-js": "3.11.5",
+    "uglify-save-license": "^0.4.1"
   },
   "publishConfig": {
     "registry": "<%= registry.publish %>"
