--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
-    "@feizheng/gulp-pkg-header": "^1.0.4",
+    "@jswork/gulp-pkg-header": "^1.0.2",
     "@jswork/next": "^1.0.0",
     "del": "^6.0.0",
     "express": "^4.17.1",
