--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
     "@jswork/gulp-pkg-header": "^1.0.3",
     "@jswork/next": "^1.0.5",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-debug": "^4.0.0",
     "gulp-header": "^2.0.9",
     "gulp-ignore": "^3.0.0",
